--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-nightbot-gemini",
+  "name": "nightbot-gemini-curhat",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
